--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "bulma": "^0.9.0",
     "gatsby": "^2.20.35",
     "gatsby-image": "^2.3.5",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-netlify": "^2.2.4",
     "gatsby-plugin-netlify-cms": "^4.2.5",
     "gatsby-plugin-purgecss": "^5.0.0",
@@ -27,6 +29,7 @@
     "node-sass": "^4.14.0",
     "prop-types": "^15.6.0",
     "react": "^16.8.4",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^6.0.0",
     "uuid": "^7.0.0"
